--- a/app/views/categories/water.html.erb
+++ b/app/views/categories/water.html.erb
@@ -34,10 +34,7 @@
 
 <hr>
 
-<div
-  id="map"
-  style="width: 100%;
-  height: 600px;"
-  data-markers="<%= @markers.to_json %>"
-></div>
+  <div class="map-bottom">
+    <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>"></div>
+  </div>
 </div>
