--- a/app/views/equipments/index.html.erb
+++ b/app/views/equipments/index.html.erb
@@ -33,6 +33,7 @@
   </div>
 
   <hr>
-
-  <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>"></div>
+  <div class="map-bottom">
+    <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>"></div>
+  </div>
 </div>
