--- a/app/views/equipments/show.html.erb
+++ b/app/views/equipments/show.html.erb
@@ -53,7 +53,9 @@
 
   <br>
   <hr>
-  <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>"></div>
+  <div class="map-bottom">
+    <div id="map" style="width: 100%; height: 600px;" data-markers="<%= @markers.to_json %>"></div>
+  </div>
 </div>
 
 
