--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <div id="wrapper">
     <%= render 'shared/navbar' %>
     <%= render 'shared/flashes' %>
+    <div class="navbar-fix">
     <%= yield %>
+    </div>
     <%= javascript_include_tag 'application' %>
     <%= javascript_include_tag "https://maps.googleapis.com/maps/api/js" %>
     <%= javascript_pack_tag 'application' %>
