--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,7 +1,11 @@
-<%= render 'shared/genericbanner' %>
 <div class="container">
   <div class="about-description">
-  <h1 style="color: #FF5910;">About</h1>
-  <p>Swackhammer, owner of the amusement park planet Moron Mountain is desperate to get new attractions and he decides that a Looney Tune characters would be perfect. He sends his diminutive underlings to get them to him, whether Bugs Bunny and Co. want to go or not. Well armed for their size, Bugs Bunny is forced to trick them into agreeing to a competition to determine their freedom. Taking advantage of their puny and stubby legged foes, the gang selects basketball for the surest chance of winning. However, the Nerdlucks turn the tables and steal the talents of leading professional basketball stars to become massive basketball bruisers known as the Monstars. In desperation, Bugs Bunny calls on the aid of Michael Jordan, the Babe Ruth of basketball, to help them have a chance at winning their freedom.</p>
+    <div class="title">
+      <h1 class="orange-font">About</h1>
+    </div>
+    <br>
+    <p style="line-height: 1.6em;">Swackhammer, owner of the amusement park planet Moron Mountain is desperate to get new attractions and he decides that a Looney Tune characters would be perfect. He sends his diminutive underlings to get them to him, whether Bugs Bunny and Co. want to go or not. Well armed for their size, Bugs Bunny is forced to trick them into agreeing to a competition to determine their freedom. Taking advantage of their puny and stubby legged foes, the gang selects basketball for the surest chance of winning. However, the Nerdlucks turn the tables and steal the talents of leading professional basketball stars to become massive basketball bruisers known as the Monstars. In desperation, Bugs Bunny calls on the aid of Michael Jordan, the Babe Ruth of basketball, to help them have a chance at winning their freedom.</p>
   </div>
+  <br> <br>
 </div>
+<%= render 'shared/genericbanner' %>
