--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,24 +1,25 @@
-    <div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://source.unsplash.com/1600x900/?sports,equipment');">
-      <h1>SportX</h1>
-      <div class="banner-content">
-        <p><span id="banner-typed-text"></span></p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://source.unsplash.com/1600x900/?sports,equipment');">
+  <h1>SportX</h1>
+  <div class="banner-content">
+    <p><span id="banner-typed-text"></span></p>
+  </div>
+  <div class="banner-content">
+    <%= form_tag equipments_path, method: :get do %>
+    <%= text_field_tag :query,
+    params[:query],
+    class: "form-control",
+      placeholder: "Find equipment"
+      %>
+      <%= submit_tag 'Go!', class: "btn-treehouse" %>
+      <% end %>
+  </div>
+</div>
 
-      </div>
-      <div class="banner-content">
-
-        <%= form_tag equipments_path, method: :get do %>
-        <%= text_field_tag :query,
-        params[:query],
-        class: "form-control",
-          placeholder: "Find equipment"
-          %>
-          <%= submit_tag 'Go!', class: "btn-treehouse" %>
-          <% end %>
-        </div>
-
-      </div>
-
-
+<div class="container">
+  <br>
+  <div class="title">
+    <h2 class="orange-font">What are you up to this weekend?</h2>
+  </div>
   <br>
   <div class="row" class="flex-item">
     <br>
@@ -39,8 +40,11 @@
         <% end %>
       </div>
     </div>
-
+    <br>
+    <br>
+  </div>
 </div>
+
 <!-- <div class="video-wrap">
     <p class="video-p"><span id="banner-typed-text"></span></p>
       <video src="http://res.cloudinary.com/dyoy2poun/video/upload/v1534368483/video.mp4" autoplay>
