--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar-wagon">
+<div class="navbar-wagon navbar-fixed-top">
   <!-- Logo -->
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
     <%= image_tag "logo.png", height: 50 %>
@@ -12,8 +12,8 @@
             <%= link_to "Categories", "#", class: "navbar-wagon-item navbar-wagon-link dropdown-toggle", "data-toggle" => "dropdown" %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
-              <%= link_to air_path do %>
-                <%= t(".aviation", default: "Air") %>
+              <%= link_to equipments_path do %>
+                <%= t(".groups", default: "All") %>
               <% end %>
             </li>
             <li>
@@ -27,13 +27,13 @@
               <% end %>
             </li>
             <li>
-              <%= link_to groups_path do %>
-                <%= t(".groups", default: "Groups") %>
+              <%= link_to air_path do %>
+                <%= t(".aviation", default: "Air") %>
               <% end %>
             </li>
             <li>
-              <%= link_to equipments_path do %>
-                <%= t(".groups", default: "All") %>
+              <%= link_to groups_path do %>
+                <%= t(".groups", default: "Groups") %>
               <% end %>
             </li>
             <li>
