--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
-  <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
+  <h2 class="orange-font">Edit <%= resource_name.to_s.humanize %></h2>
+  <hr>
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= f.error_notification %>
 
